@@ -292,7 +292,7 @@ public class EditPropertyAliasDialog extends Dialog {
 		Button button = new Button(parent,SWT.RADIO);
 		button.setText(label);
 		button.setFont(JFaceResources.getDialogFont());
-		button.setData(new Integer(id));		
+		button.setData( Integer.valueOf( id ));		
 		button.setSelection( checked );
 		
 		button.addSelectionListener (new SelectionAdapter() {
