@@ -64,7 +64,7 @@ public class PartnerLinkRoleSelectorDialog extends StatusDialog {
 		Button button = new Button(parent, SWT.RADIO);
 		button.setText(label);
 		button.setFont(JFaceResources.getDialogFont());
-		button.setData(new Integer(id));
+		button.setData( Integer.valueOf( id ));
 		button.setSelection(checked);
 
 		button.addSelectionListener(new SelectionAdapter() {
