@@ -131,9 +131,8 @@ public class FaultThrowNameSection extends BPELPropertySection {
 				data1 = (FlatFormData)faultVariableNameComposite.getLayoutData();
 				data1.top = new FlatFormAttachment(faultNameComposite, IDetailsAreaConstants.VSPACE);
 			}
-		} else {
-			data.top = new FlatFormAttachment(0, 0);
-		}
+		} 
+		
 		faultTypeComposite.setVisible(isFaultTypeEnabled);
 		namespaceComposite.setVisible(isNamespaceUserDef());
 		faultNameComposite.setVisible(!isNamespaceUserDef());
@@ -543,7 +542,7 @@ public class FaultThrowNameSection extends BPELPropertySection {
 
 	@Override
 	public Object getUserContext() {
-		return new Integer(lastChangeContext);
+		return Integer.valueOf( lastChangeContext );
 	}
 	@Override
 	public void restoreUserContext(Object userContext) {
